--- a/index.css
+++ b/index.css
@@ -9,6 +9,19 @@ body {
     font-family:'Roboto', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: rgb(223, 223, 223);
+}
+
+a:hover{
+    border-bottom: 1px solid rgb(102, 102, 102);
+}
+
+a:visited{
+    color: rgb(173, 173, 173);
+}
+
 .container{
     max-width: 750px;
     margin: auto;
@@ -98,7 +111,7 @@ body {
     margin: 10px;
     padding: 10px;
     border: 2px solid rgba(255, 245, 238, 0.541);
-   background: rgba(128, 128, 128, 0.13);
+    background: rgba(128, 128, 128, 0.13);
     border-radius: 5px;
     cursor:default;
 }
@@ -107,4 +120,45 @@ body {
     transform: scale(1.1);
     background: rgba(98, 70, 117, 0.13);
     border: 2px solid rgba(223, 209, 250, 0.575);
+}
+
+@media screen and (max-device-width: 700px){
+    body {
+        background-color: rgb(39, 39, 43);
+        color: rgb(223, 223, 223);
+        font-size: 12px;
+        font-weight: normal;
+        font-family:'Roboto', sans-serif;
+    }
+    
+    .info{
+        display: block;
+        text-align: center;
+    }
+
+    .info p{
+        color: rgba(223, 223, 223, 0.87);
+        font-style: italic;
+        margin: 5px;
+        font-size: 10px;
+    }
+
+    .table td{
+        font-size: 25px;
+    }
+
+    .skills div{
+        font-size: 25px;
+    }
+
+    .list{
+        font-size: 10px;
+    }
+
+    .skills div:hover{
+        transform: none;
+        background: rgba(98, 70, 117, 0.13);
+        border: 2px solid rgba(51, 40, 58, 0.575);
+    }
+
 }
