--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-    
     background-color: rgb(39, 39, 43);
     color: rgb(223, 223, 223);
     font-size: 18px;
     font-weight: normal;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -14,172 +15,259 @@ a {
     color: rgb(223, 223, 223);
 }
 
-a:hover{
+a:hover {
     border-bottom: 1px solid rgb(102, 102, 102);
 }
 
-a:visited{
+a:visited {
     color: rgb(173, 173, 173);
 }
 
-.container{
+.container {
     max-width: 750px;
     margin: auto;
     margin-top: 50px;
 }
 
-.info{
+.info {
     margin-bottom: 15px;
     display: flex;
     text-align: center;
+    align-items: center;
 }
 
-.info .avatar{
-    border-radius: 20%;
+.info .avatar {
+    border-radius: 10%;
     width: 200px;
     height: 200px;
-    box-shadow: 8px 8px 14px rgba(0, 0, 0, 0.35);
-    margin-right: 20px;
+    box-shadow: 1px 1px 14px rgba(0, 0, 0, 0.35);
+    margin-right: 50px;
 }
 
-.info .icon{
+.info .icon {
     filter: invert(1);
 }
 
-.info .icon:hover{
+.info .icon:hover {
     transform: scale(1.1);
 }
 
-.info p{
+.info p {
     color: rgba(223, 223, 223, 0.87);
     font-style: italic;
-    margin: 5px;
-    font-size: 16px;
+    margin: 3px;
+    font-size: 14px;
 }
 
-@media(max-width: 700px){
-    .info{
+.info-text h2 {
+    margin-bottom: 10px;
+}
+
+#post {
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+@media (max-width: 700px) {
+    .info {
         display: block;
         text-align: center;
     }
 }
 
-.card{
+.card {
     padding: 5px 20px;
     margin-bottom: 15px;
     border: 3px solid rgba(0, 0, 0, 0.11);
-    background: rgba(0, 0, 0, 0.10);
+    background: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
 
-.card h3{
+.card h3 {
     padding: 5px;
     margin: 5px;
-    text-align:center;
+    text-align: center;
 }
 
-.list{
+.list {
     padding: 0px 50px;
-    list-style-type:square;
+    list-style-type: square;
 }
 
-.list li{
+.list li {
     margin-bottom: 10px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.11) ;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.11);
 }
 
-.table{
+.table {
     width: 100%;
 }
 
-.table td{
+.table td {
+    padding-top: 10px;
     padding-bottom: 10px;
-    border-top:3px solid rgba(0, 0, 0, 0.11);
+    border-top: 3px solid rgba(0, 0, 0, 0.11);
 }
 
-.table td:nth-child(1){
+.table div {
+    justify-content: center;
+    padding: 2px;
+}
+.table td:nth-child(1) {
     padding-right: 20px;
 }
 
-
-.skills{
-    display:flow-root;
+.skills {
+    display: flow-root;
 }
 
-.skills div{
-    float:left;
+.skills div {
+    float: left;
     margin: 10px;
     padding: 10px;
     border: 2px solid rgba(255, 245, 238, 0.541);
     background: rgba(128, 128, 128, 0.13);
     border-radius: 5px;
-    cursor:default;
+    cursor: default;
 }
 
-.skills div:hover{
+.skills div:hover {
     transform: scale(1.1);
     background: rgba(98, 70, 117, 0.13);
     border: 2px solid rgba(223, 209, 250, 0.575);
 }
 
-@media screen and (max-device-width: 700px){
+@media screen and (max-device-width: 700px) {
     body {
         background-color: rgb(39, 39, 43);
         color: rgb(223, 223, 223);
         font-size: 12px;
         font-weight: normal;
-        font-family:'Roboto', sans-serif;
+        font-family: 'Roboto', sans-serif;
+        margin: 2px;
     }
-    
-    .info{
+
+    .info {
         display: block;
         text-align: center;
     }
 
-    .info p{
+    .info p {
         color: rgba(223, 223, 223, 0.87);
         font-style: italic;
         margin: 5px;
         font-size: 10px;
     }
 
-    .table td{
+    .table td {
         font-size: 25px;
     }
 
-    .skills div{
+    .skills div {
         font-size: 25px;
     }
 
-    .list{
+    .list {
         font-size: 10px;
     }
 
-    .skills div:hover{
+    .skills div:hover {
         transform: none;
         background: rgba(98, 70, 117, 0.13);
         border: 2px solid rgba(51, 40, 58, 0.575);
     }
-
 }
 
 @media print {
-    .info .icon{
-        display: none;
+    body {
+        background-color: rgb(249, 249, 255);
+        color: rgb(10, 10, 10);
+        padding: 0;
+        margin: 0;
+        font-size: 18px;
+        font-weight: normal;
+        font-family: 'Roboto', sans-serif;
+    }
+    .container {
+        margin-top: 10px;
+    }
+    a:visited {
+        color: rgb(10, 10, 10);
     }
 
-    .info .avatar{
+    .info .icon {
+        filter: none;
+    }
+
+    .info .avatar {
         box-shadow: none;
-        
+        /* border-radius: 50%; */
+        height: 180px;
+        width: 180px;
     }
 
-    .info{
-        margin-bottom: 15px;
+    .info {
+        margin-bottom: 2px;
+        margin-top: 0;
         display: flex;
         text-align: center;
     }
 
-    .card{
-        margin: 25px 0;
+    .info p {
+        color: rgb(10, 10, 10);
+    }
+
+    .info hr {
+        display: none;
+    }
+    .info-text {
+        margin-left: 30px;
+    }
+    .info-text h2 {
+        margin-bottom: 5px;
+    }
+    .card {
+        border: 1px solid black;
+    }
+    .card h3 {
+        padding: 2px;
+        margin: 2px;
+        text-align: center;
+    }
+    .table td {
+        padding-bottom: 4px;
+        padding-top: 4px;
+
+        border-top: 1px solid rgb(34, 34, 34);
+    }
+    .list li {
+        border-bottom: none;
+    }
+
+    .list {
+        margin-top: 3px;
+        margin-bottom: 3px;
+    }
+
+    .skills {
+        display: grid;
+        grid-template-columns: 35% 35% 35%;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+
+        padding-left: 35px;
+        grid-auto-flow: column;
+    }
+    .skills div {
+        display: list-item;
+        list-style-position: outside;
+        list-style: square;
+        border: none;
+        background: none;
+        margin: 4px;
+        padding: 0px;
+    }
+
+    #noprint {
+        display: none;
     }
 }
